# autonomica

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
api/: dependencies.py  main.py
api/routes/: actions.py  agents.py  audit.py  governance.py  metrics.py
autonomica/: __init__.py  adapter.py  audit.py  config.py  decorator.py  governor.py  interceptor.py  models.py  scorer.py
autonomica/escalation/: base.py  console.py  slack.py  webhook.py
autonomica/integrations/: __init__.py  autogen.py  base.py  crewai.py  langchain.py
autonomica/storage/: base.py  sqlite.py
examples/: benchmark_adaptive_vs_static.py  load_test.py  quickstart.py  real_agent_demo.py
scripts/: gen_social_preview.py
tests/: conftest.py  test_adapter.py  test_api.py  test_autogen.py  test_crewai.py  test_decorator.py  test_fail_policy.py  test_governor.py  test_integration_langchain.py  test_models.py  test_scorer.py  test_tracing.py  test_webhook.py
