[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autonomica"
version = "0.1.0"
description = "Runtime adaptive governance system for AI agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "langchain-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["autonomica"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
